--- a/style.css
+++ b/style.css
@@ -6,26 +6,35 @@ body {
 
 /* -- container ---- */
 .container {
-  padding: 10px;
-  width: 380px;
-  margin: 0 auto;
+  border: 3px solid #f1f1f1;
+  border-style: groove;
+  border-radius: 5px;
+  padding: 10px 12px 20px 10px;
+  margin-top: 4%;
+  margin-left: 35%;
+  margin-right: 25%;
+  width: 30%;
 }
 
 /* Remove margins and padding from the list */
 ul {
-  margin: auto;
-  padding: 10;
+  margin: 0;
+  padding: 0;
 }
 
 /* Style the list items */
 ul li {
   cursor: pointer;
   position: relative;
-  padding: 12px 8px 12px 40px;
+  padding: 10;
   list-style-type: none;
   background: #eee;
   font-size: 18px;
   transition: 0.2s;
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
 
   /* make the list items unselectable */
   -webkit-user-select: none;
@@ -42,6 +51,11 @@ ul li:nth-child(odd) {
 /* Darker background-color on hover */
 ul li:hover {
   background: #ddd;
+  background-color: #f9f9f9;
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
 }
 
 /* When clicked on, add a background color and strike out text */
@@ -49,6 +63,10 @@ ul li.checked {
   background: #888;
   color: #fff;
   text-decoration: line-through;
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
 }
 
 /* Add a "checked" mark when clicked on */
@@ -77,12 +95,23 @@ ul li.checked::before {
   background-color: #f44336;
   color: white;
 }
+/*input */
+input[type="text"] {
+  background-color: #f9f9f9;
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+}
+input[type="text"]:focus {
+  border: 3px solid #555;
+}
 
 /* Style the header */
 .header {
-  background-color: #f44336;
-  padding: 30px 40px;
-  color: white;
+  background-color: #ffff;
+  padding: 10px 5px;
+  color: #34373d;
   text-align: center;
 }
 
@@ -108,7 +137,6 @@ input {
 .addBtn {
   padding: 10px;
   width: 25%;
-  background: #d9d9d9;
   color: #555;
   float: left;
   text-align: center;
@@ -116,6 +144,9 @@ input {
   cursor: pointer;
   transition: 0.3s;
   border-radius: 0;
+  position: relative;
+  background-color: #fff;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .addBtn:hover {
