--- a/style.css
+++ b/style.css
@@ -29,12 +29,13 @@ ul li {
   padding: 10;
   list-style-type: none;
   background: #eee;
-  font-size: 18px;
+  font-size: 15px;
   transition: 0.2s;
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
   box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 
   /* make the list items unselectable */
   -webkit-user-select: none;
@@ -60,8 +61,8 @@ ul li:hover {
 
 /* When clicked on, add a background color and strike out text */
 ul li.checked {
-  background: #888;
-  color: #fff;
+  background: #f4f6ff;
+  color: #272822;
   text-decoration: line-through;
   width: 100%;
   padding: 12px 20px;
@@ -73,11 +74,11 @@ ul li.checked {
 ul li.checked::before {
   content: "";
   position: absolute;
-  border-color: #fff;
+  border-color: #272822;
   border-style: solid;
   border-width: 0 2px 2px 0;
   top: 10px;
-  left: 16px;
+  left: 7px;
   transform: rotate(45deg);
   height: 15px;
   width: 7px;
@@ -92,19 +93,21 @@ ul li.checked::before {
 }
 
 .close:hover {
-  background-color: #f44336;
+  background-color: #3e69e4;
   color: white;
 }
 /*input */
 input[type="text"] {
   background-color: #f9f9f9;
-  width: 100%;
+  width: 80%;
   padding: 12px 20px;
   margin: 8px 0;
   box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
 }
 input[type="text"]:focus {
-  border: 3px solid #555;
+  border: 3px #555;
 }
 
 /* Style the header */
@@ -113,6 +116,7 @@ input[type="text"]:focus {
   padding: 10px 5px;
   color: #34373d;
   text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 /* Clear floats after the header */
@@ -126,7 +130,7 @@ input[type="text"]:focus {
 input {
   margin: 0;
   border: none;
-  border-radius: 0;
+  border-radius: 6px;
   width: 75%;
   padding: 10px;
   float: left;
@@ -136,16 +140,18 @@ input {
 /* Style the "Add" button */
 .addBtn {
   padding: 10px;
-  width: 25%;
+  width: 3%;
   color: #555;
-  float: left;
+  float: right;
   text-align: center;
   font-size: 16px;
   cursor: pointer;
   transition: 0.3s;
-  border-radius: 0;
-  position: relative;
-  background-color: #fff;
+  border-radius: 5px;
+  position: absolute;
+  top: 120px;
+  right: 450px;
+  background-color: #f9f9f9;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
 
